force-app/main/default/objects/SBQQ__RecordJob__c/fields/SBQQ__IsRead__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IsRead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the user has been alerted of the record job&#39;s finished status</description>
        <inlineHelpText>If checked the user has been alerted of the record job&#39;s finished status.</inlineHelpText>
        <label>Is Read</label>
        <type>Checkbox</type>
    </CustomField>