force-app/main/default/objects/SBQQ__RecordJob__c/fields/SBQQ__JobId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__JobId__c</fullName>
        <description>The Apex Job Id</description>
        <label>Job Id</label>
        <length>90</length>
        <type>Text</type>
    </CustomField>