force-app/main/default/objects/SBQQ__RecordJob__c/fields/SBQQ__RecordId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RecordId__c</fullName>
        <description>The unique key for this record, comprised of the parent record Id and the type of job</description>
        <label>Record Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>