force-app/main/default/objects/SBQQ__RecordJob__c/fields/SBQQ__RedirectUrl__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RedirectUrl__c</fullName>
        <description>Url to redirect to once the job finishes.</description>
        <inlineHelpText>Url to redirect to once the job finishes.</inlineHelpText>
        <label>Redirect URL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </CustomField>