force-app/main/default/objects/SBQQ__RecordJob__c/fields/SBQQ__Stacktrace__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Stacktrace__c</fullName>
        <description>The stacktrace for the error that caused the record job to fail.</description>
        <inlineHelpText>The stacktrace of the background job performed if no job id was specified.</inlineHelpText>
        <label>Stacktrace</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>