force-app/main/default/objects/SBQQ__RecordJob__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__RecordId__c</columns>
        <columns>SBQQ__JobId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>